--- a/read-khan-academy.ipynb
+++ b/read-khan-academy.ipynb
@@ -17,7 +17,8 @@
     "import os\n",
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
-    "import pymongo"
+    "import pymongo\n",
+    "\n"
    ]
   },
   {
