Lesson metadata reading finished

--- a/read-khan-academy-1.ipynb
+++ b/read-khan-academy-1.ipynb
@@ -10,29 +10,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
-    "import pymongo"
+    "import pymongo\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import Selenium Libraries\n",
-    "# pip install webdriver-manager\n",
-    "\n",
     "from selenium import webdriver\n",
-    "from selenium.webdriver.chrome.options import Options\n",
     "from selenium.webdriver.chrome.service import Service\n",
-    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "\n",
+    "service = Service(executable_path='r/chromedriver')\n",
+    "options = webdriver.ChromeOptions()\n",
+    "options.add_argument('--headless')\n",
+    "options.add_argument('--no-sandbox')\n",
+    "options.add_argument('--disable-dev-shm-usage')\n",
+    "driver = webdriver.Chrome(service=service, options=options)\n",
     "\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.common.by import By\n",
@@ -41,17 +44,8 @@
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "\n",
-    "options = Options()\n",
-    "options.page_load_strategy = 'eager'\n",
-    "# options.add_argument(\"start-maximized\")\n",
-    "options.add_argument('--ignore-certificate-errors')\n",
-    "# options.add_argument('--incognito')\n",
-    "# options.add_argument('--headless')\n",
-    "\n",
-    "service = Service('chromedriver.exe')\n",
-    "driver = webdriver.Chrome(ChromeDriverManager().install(), options=options)\n",
-    "# driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
-    "# driver = webdriver.Chrome(service=service, options=options)\n"
+    "url = \"https://www.khanacademy.org/math/probability/xa88397b6:display-quantitative/xa88397b6:frequency-tables-dot-plots/v/frequency-tables-and-dot-plots\"\n",
+    "driver.get(url)\n"
    ]
   },
   {
@@ -64,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +67,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,21 +89,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t\tVideo - não encontrei\n"
+      "not found\n"
      ]
     }
    ],
    "source": [
     "# Read Lesson Page using Selenium\n",
     "\n",
-    "url = \"https://www.khanacademy.org/math/probability/xa88397b6:display-quantitative/xa88397b6:frequency-tables-dot-plots/v/frequency-tables-and-dot-plots\"\n",
+    "# url = \"https://www.khanacademy.org/math/probability/xa88397b6:display-quantitative/xa88397b6:frequency-tables-dot-plots/v/frequency-tables-and-dot-plots\"\n",
+    "# url = \"https://www.khanacademy.org/math/probability/xa88397b6:display-quantitative/xa88397b6:frequency-tables-dot-plots/e/creating-dot-plots\"\n",
+    "url = \"https://www.khanacademy.org/math/probability/xa88397b6:display-quantitative/xa88397b6:mean-median-data-displays/a/choosing-the-best-measure-of-center\"\n",
     "# driver.get(url)\n",
     "\n",
     "# url = \"https://freetts.com/\"\n",
@@ -120,41 +116,65 @@
     "   driver.get(url)\n",
     "   # https://selenium-python.readthedocs.io/waits.html\n",
     "\n",
-    "\n",
+    "   # Wait till the page is fully loaded\n",
     "   try:\n",
-    "      element = WebDriverWait(driver, 10).until(\n",
-    "         EC.presence_of_element_located(By.CSS_SELECTOR, '.ka-video-player')\n",
-    "      )\n",
+    "\n",
+    "      if type == 'Video':\n",
+    "         element = WebDriverWait(driver, 10).until(\n",
+    "            EC.presence_of_element_located((By.CSS_SELECTOR, 'span[data-test-id=\"video-time-hidden\"]'))\n",
+    "         )\n",
+    "\n",
+    "      elif type == 'Exercise':\n",
+    "         element = WebDriverWait(driver, 10).until(\n",
+    "            EC.presence_of_element_located((By.CSS_SELECTOR, '#content-library-content-footer-portal ._g20yn58 span'))\n",
+    "         )\n",
+    "\n",
+    "      elif type == 'Article':\n",
+    "         element = WebDriverWait(driver, 10).until(\n",
+    "            EC.presence_of_element_located((By.CSS_SELECTOR, '.framework-perseus'))\n",
+    "         )\n",
+    "\n",
     "   except:\n",
-    "      return 'não encontrei'\n",
-    "   \n",
+    "      return 'not found'\n",
     "\n",
+    "   # Get metadata\n",
+    "\n",
+    "   # Get video length\n",
     "   if type == 'Video':\n",
-    "      # elements = driver.find_elements_by_css_selector('span[data-test-id=\"video-time-hidden\"]')\n",
-    "\n",
-    "      # Funciona\n",
-    "      # elements = driver.find_elements(By.CSS_SELECTOR, \"._7gv3ej\")\n",
-    "      # Não Funciona\n",
-    "      # elements = driver.find_elements(By.CSS_SELECTOR, \"._1tuo6xk\")\n",
-    "      elements = driver.find_elements(By.CSS_SELECTOR, '.ka-video-player')\n",
-    "\n",
-    "\n",
-    "      length = len(elements)\n",
-    "      # if len(elements) == 1:\n",
-    "      #    length = elements[0].text   # seconds\n",
-    "      # else:\n",
-    "      #    length = len(elements) # 'não achei'\n",
+    "      elements = driver.find_elements(By.CSS_SELECTOR, 'span[data-test-id=\"video-time-hidden\"]')\n",
+    "      if len(elements) == 1:\n",
+    "         # Get # of seconds of the video\n",
+    "         x = re.search(\"[0-9]+:[0-9]+$\", elements[0].text)\n",
+    "         video_length = x.group()\n",
+    "         min_seg = video_length.split(\":\")\n",
+    "         length = int(min_seg[0]) * 60 + int(min_seg[1])\n",
+    "      else:\n",
+    "         length = 0     # 'not found'\n",
     "      return length\n",
+    "\n",
+    "   # Get numbervideo length\n",
     "   elif type == 'Exercise':\n",
-    "      questions = 4  # number of questions\n",
+    "      elements = driver.find_elements(By.CSS_SELECTOR, '#content-library-content-footer-portal ._g20yn58 span')\n",
+    "      if len(elements) == 1:\n",
+    "         x = re.search(\"[0-9]+\", elements[0].text)\n",
+    "         questions = int(x.group())\n",
+    "      else:\n",
+    "         questions = 0     # 'not found'\n",
     "      return questions\n",
+    "\n",
+    "   # Get article size in Kb\n",
     "   elif type == 'Article':\n",
-    "      size = 15      # Kilobytes\n",
+    "      elements = driver.find_elements(By.CSS_SELECTOR, '.framework-perseus')\n",
+    "      if len(elements) == 1:\n",
+    "         size = elements[0].text / 1024\n",
+    "      else:\n",
+    "         size = 0     # 'not found'\n",
     "      return size\n",
     "\n",
     "\n",
-    "meta_data = getLessonMeta(url, 'Video')\n",
-    "print(\"\\t\\t\" + 'Video' + ' - ' + str(meta_data))\n"
+    "meta_data = getLessonMeta(url, 'Article')\n",
+    "# print('Exercise' + ' - ' + str(meta_data))\n",
+    "print(meta_data)\n"
    ]
   },
   {
@@ -167,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -176,106 +196,81 @@
      "text": [
       "Unit 1: Displaying a single quantitative variable\n",
       "\tFrequency tables and dot plots\n",
-      "\t\tVideo - 0\n",
-      "\t\tExercise - 4\n",
-      "\t\tExercise - 4\n",
+      "\t\tVideo - 439\n",
+      "\t\tExercise - 5\n",
+      "\t\tExercise - 5\n",
       "\tHistograms\n",
-      "\t\tVideo - 0\n",
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3508, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\oscar\\AppData\\Local\\Temp\\ipykernel_24812\\3757398029.py\", line 46, in <module>\n",
-      "    meta_data = getLessonMeta(domain + lesson_link, lesson_type)\n",
-      "                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\oscar\\AppData\\Local\\Temp\\ipykernel_24812\\2813562399.py\", line 11, in getLessonMeta\n",
-      "    driver.get(url)\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\", line 333, in get\n",
-      "    :Returns:\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py\", line 319, in execute\n",
-      "    for key, val in value.items():\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\selenium\\webdriver\\remote\\remote_connection.py\", line 374, in execute\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\selenium\\webdriver\\remote\\remote_connection.py\", line 397, in _request\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\urllib3\\request.py\", line 78, in request\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\urllib3\\request.py\", line 170, in request_encode_body\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\urllib3\\poolmanager.py\", line 376, in urlopen\n",
-      "    ) -> dict[str, typing.Any]:\n",
-      "                       ^^^^^^^^^\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\urllib3\\connectionpool.py\", line 714, in urlopen\n",
-      "    if not isinstance(retries, Retry):\n",
-      "                           ^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\urllib3\\connectionpool.py\", line 466, in _make_request\n",
-      "    try:\n",
-      "         \n",
-      "  File \"<string>\", line 3, in raise_from\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\urllib3\\connectionpool.py\", line 461, in _make_request\n",
-      "    timeout_obj.start_connect()\n",
-      "                                \n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\http\\client.py\", line 1378, in getresponse\n",
-      "    response.begin()\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\http\\client.py\", line 318, in begin\n",
-      "    version, status, reason = self._read_status()\n",
-      "                              ^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\http\\client.py\", line 279, in _read_status\n",
-      "    line = str(self.fp.readline(_MAXLINE + 1), \"iso-8859-1\")\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\socket.py\", line 706, in readinto\n",
-      "    return self._sock.recv_into(b)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2105, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1428, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1319, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1172, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1087, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(record))\n",
-      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 969, in format_record\n",
-      "    frame_info.lines, Colors, self.has_colors, lvals\n",
-      "    ^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 792, in lines\n",
-      "    return self._sd.lines\n",
-      "           ^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    return value\n",
-      "                 \n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\stack_data\\core.py\", line 698, in lines\n",
-      "    \"\"\"\n",
-      "        \n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    return value\n",
-      "                 \n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\stack_data\\core.py\", line 649, in included_pieces\n",
-      "    # strange entries...\n",
-      "                     ^^^^\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    return value\n",
-      "                 \n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\stack_data\\core.py\", line 628, in executing_piece\n",
-      "    result = self.code.co_filename\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\oscar\\anaconda3\\envs\\dash\\Lib\\site-packages\\executing\\executing.py\", line 164, in only\n",
-      "    inst.lineno = lineno\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+      "\t\tVideo - 441\n",
+      "\t\tExercise - 5\n",
+      "\t\tVideo - 269\n",
+      "\t\tExercise - 5\n",
+      "\tMean and median in data displays\n",
+      "\t\tVideo - 534\n",
+      "\t\tVideo - 148\n",
+      "\t\tExercise - 5\n",
+      "\t\tVideo - 275\n",
+      "\t\tExercise - 5\n",
+      "\t\tArticle - 15\n",
+      "\tInterquartile range\n",
+      "\t\tVideo - 372\n",
+      "\t\tExercise - 5\n",
+      "\tBox and whisker plots\n",
+      "\t\tVideo - 198\n",
+      "\t\tVideo - 195\n",
+      "\t\tExercise - 5\n",
+      "\t\tVideo - 198\n",
+      "\t\tExercise - 5\n",
+      "\t\tVideo - 464\n",
+      "\t\tExercise - 5\n",
+      "\t\tVideo - 500\n",
+      "\t\tExercise - 5\n",
+      "Unit 2: Analyzing a single quantitative variable\n",
+      "\tStandard deviation\n",
+      "\t\tVideo - 638\n",
+      "\t\tVideo - 573\n",
+      "\t\tExercise - 5\n",
+      "\t\tVideo - 229\n",
+      "\t\tExercise - 5\n",
+      "\t\tVideo - 478\n",
+      "\tComparing distributions\n",
+      "\t\tVideo - 438\n",
+      "\t\tExercise - 5\n",
+      "\tPercentiles and z-scores\n",
+      "\t\tVideo - 218\n",
+      "\t\tExercise - 5\n",
+      "\t\tVideo - 305\n",
+      "\t\tVideo - 210\n",
+      "\t\tExercise - 5\n",
+      "\tNormal distributions and the empirical rule\n",
+      "\t\tVideo - 653\n",
+      "\t\tVideo - 625\n",
+      "\t\tExercise - 5\n",
+      "\t\tArticle - 15\n",
+      "\tNormal distribution calculations\n",
+      "\t\tVideo - 260\n",
+      "\t\tVideo - 307\n",
+      "\t\tExercise - 5\n",
+      "\t\tVideo - 430\n",
+      "\t\tExercise - 5\n",
+      "\t\tVideo - 254\n",
+      "\t\tVideo - 360\n",
+      "\t\tExercise - 5\n",
+      "Unit 3: Two-way tables\n",
+      "\tTwo-way tables introduction\n",
+      "\t\tVideo - 383\n",
+      "\t\tExercise - 5\n",
+      "\t\tExercise - 5\n",
+      "\t\tVideo - 268\n",
+      "\t\tExercise - 5\n",
+      "\tDistributions in two-way tables\n",
+      "\t\tVideo - 317\n",
+      "\t\tExercise - 5\n",
+      "\t\tExercise - 5\n",
+      "\t\tExercise - not found\n",
+      "\t\tVideo - 103\n",
+      "\t\tArticle - 15\n",
+      "\t\tExercise - 5\n",
+      "Unit 4: Scatterplots\n"
      ]
     }
    ],
@@ -320,29 +315,11 @@
     "         if lesson_type not in ['Article', 'Video']:\n",
     "            lesson_type = 'Exercise'\n",
     "\n",
-    "         # print(\"\\t\\t\" + lesson_title)\n",
-    "         # print(\"\\t\\t\" + lesson_type)\n",
-    "         # print(\"\\t\\t\" + lesson_link)\n",
-    "\n",
     "         # Load lesson metadata\n",
     "         meta_data = getLessonMeta(domain + lesson_link, lesson_type)\n",
     "         print(\"\\t\\t\" + lesson_type + ' - ' + str(meta_data))\n",
     "\n",
-    "\n",
-    "\n",
-    "         # if lesson_type == 'Video':\n",
-    "         #    length = 10    # seconds\n",
-    "         # elif lesson_type == 'Exercise':\n",
-    "         #    questions = 4  # number of questions\n",
-    "         # elif lesson_type == 'Article':\n",
-    "         #    size = 15      # Kilobytes\n",
-    "         \n",
-    "         # if length:     print(\"\\t\\t\" + lesson_type + ' - ' + str(length))\n",
-    "         # if questions:  print(\"\\t\\t\" + lesson_type + ' - ' + str(questions))\n",
-    "         # if size:       print(\"\\t\\t\" + lesson_type + ' - ' + str(size))\n",
-    "\n",
-    "\n",
-    " \n"
+    "\n"
    ]
   },
   {
