Lesson metadata reading finished 2

--- a/read-khan-academy-1.ipynb
+++ b/read-khan-academy-1.ipynb
@@ -89,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "not found\n"
+      "1.66796875\n"
      ]
     }
    ],
@@ -166,7 +166,7 @@
     "   elif type == 'Article':\n",
     "      elements = driver.find_elements(By.CSS_SELECTOR, '.framework-perseus')\n",
     "      if len(elements) == 1:\n",
-    "         size = elements[0].text / 1024\n",
+    "         size = len(elements[0].text) / 1024\n",
     "      else:\n",
     "         size = 0     # 'not found'\n",
     "      return size\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -197,80 +197,36 @@
       "Unit 1: Displaying a single quantitative variable\n",
       "\tFrequency tables and dot plots\n",
       "\t\tVideo - 439\n",
-      "\t\tExercise - 5\n",
-      "\t\tExercise - 5\n",
+      "\t\tExercise - 4\n",
+      "\t\tExercise - 4\n",
       "\tHistograms\n",
-      "\t\tVideo - 441\n",
-      "\t\tExercise - 5\n",
+      "\t\tVideo - 442\n",
+      "\t\tExercise - 4\n",
       "\t\tVideo - 269\n",
-      "\t\tExercise - 5\n",
+      "\t\tExercise - 4\n",
       "\tMean and median in data displays\n",
       "\t\tVideo - 534\n",
       "\t\tVideo - 148\n",
-      "\t\tExercise - 5\n",
+      "\t\tExercise - 4\n",
       "\t\tVideo - 275\n",
-      "\t\tExercise - 5\n",
-      "\t\tArticle - 15\n",
+      "\t\tExercise - 4\n",
+      "\t\tArticle - 1.66796875\n",
       "\tInterquartile range\n",
       "\t\tVideo - 372\n",
-      "\t\tExercise - 5\n",
+      "\t\tExercise - 4\n",
       "\tBox and whisker plots\n",
       "\t\tVideo - 198\n",
-      "\t\tVideo - 195\n",
-      "\t\tExercise - 5\n",
-      "\t\tVideo - 198\n",
-      "\t\tExercise - 5\n",
-      "\t\tVideo - 464\n",
-      "\t\tExercise - 5\n",
-      "\t\tVideo - 500\n",
-      "\t\tExercise - 5\n",
-      "Unit 2: Analyzing a single quantitative variable\n",
-      "\tStandard deviation\n",
-      "\t\tVideo - 638\n",
-      "\t\tVideo - 573\n",
-      "\t\tExercise - 5\n",
-      "\t\tVideo - 229\n",
-      "\t\tExercise - 5\n",
-      "\t\tVideo - 478\n",
-      "\tComparing distributions\n",
-      "\t\tVideo - 438\n",
-      "\t\tExercise - 5\n",
-      "\tPercentiles and z-scores\n",
-      "\t\tVideo - 218\n",
-      "\t\tExercise - 5\n",
-      "\t\tVideo - 305\n",
-      "\t\tVideo - 210\n",
-      "\t\tExercise - 5\n",
-      "\tNormal distributions and the empirical rule\n",
-      "\t\tVideo - 653\n",
-      "\t\tVideo - 625\n",
-      "\t\tExercise - 5\n",
-      "\t\tArticle - 15\n",
-      "\tNormal distribution calculations\n",
-      "\t\tVideo - 260\n",
-      "\t\tVideo - 307\n",
-      "\t\tExercise - 5\n",
-      "\t\tVideo - 430\n",
-      "\t\tExercise - 5\n",
-      "\t\tVideo - 254\n",
-      "\t\tVideo - 360\n",
-      "\t\tExercise - 5\n",
-      "Unit 3: Two-way tables\n",
-      "\tTwo-way tables introduction\n",
-      "\t\tVideo - 383\n",
-      "\t\tExercise - 5\n",
-      "\t\tExercise - 5\n",
-      "\t\tVideo - 268\n",
-      "\t\tExercise - 5\n",
-      "\tDistributions in two-way tables\n",
-      "\t\tVideo - 317\n",
-      "\t\tExercise - 5\n",
-      "\t\tExercise - 5\n",
-      "\t\tExercise - not found\n",
-      "\t\tVideo - 103\n",
-      "\t\tArticle - 15\n",
-      "\t\tExercise - 5\n",
-      "Unit 4: Scatterplots\n"
+      "\t\tVideo - not found\n",
+      "\t\tExercise - 4\n",
+      "\t\tVideo - 198\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t\tExercise - 4\n",
+      "\t\tVideo - 464\n"
      ]
     }
    ],
