Created reading MongoDB file

--- a/read-khan-academy-2.ipynb
+++ b/read-khan-academy-2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Script Variables\n",
+    "\n",
+    "subject = 'High school statistics'\n",
+    "# subject = 'Statistics and probability'\n",
+    "# subject = 'AP®︎/College Statistics'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pymongo.collection.Collection'>\n"
+      "<class 'pymongo.cursor.Cursor'>\n"
      ]
     }
    ],
@@ -42,7 +55,12 @@
     "# Lessons collection\n",
     "colLessons = db[\"lessons\"]\n",
     "\n",
-    "print(type(colLessons))\n"
+    "query = { 'subject': subject }\n",
+    "\n",
+    "lessons = colLessons.find(query)\n",
+    "\n",
+    "\n",
+    "print(type(lessons))\n"
    ]
   },
   {
