MongoDB -> Pandas update

--- a/read-khan-academy-2.ipynb
+++ b/read-khan-academy-2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,6 @@
        "      <th>unit</th>\n",
        "      <th>group</th>\n",
        "      <th>lesson</th>\n",
-       "      <th>lesson_type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -73,7 +72,6 @@
        "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
        "      <td>Frequency tables and dot plots</td>\n",
        "      <td>Frequency tables &amp; dot plots</td>\n",
-       "      <td>Video</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -81,7 +79,6 @@
        "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
        "      <td>Histograms</td>\n",
        "      <td>Creating a histogram</td>\n",
-       "      <td>Video</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -89,7 +86,6 @@
        "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
        "      <td>Histograms</td>\n",
        "      <td>Interpreting a histogram</td>\n",
-       "      <td>Video</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -97,7 +93,6 @@
        "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
        "      <td>Mean and median in data displays</td>\n",
        "      <td>Statistics intro: Mean, median, &amp; mode</td>\n",
-       "      <td>Video</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -105,7 +100,6 @@
        "      <td>Unit 1: Displaying a single quantitative variable</td>\n",
        "      <td>Mean and median in data displays</td>\n",
        "      <td>Median in a histogram</td>\n",
-       "      <td>Video</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -119,22 +113,15 @@
        "3  High school statistics  Unit 1: Displaying a single quantitative variable   \n",
        "4  High school statistics  Unit 1: Displaying a single quantitative variable   \n",
        "\n",
-       "                              group                                  lesson  \\\n",
-       "0    Frequency tables and dot plots            Frequency tables & dot plots   \n",
-       "1                        Histograms                    Creating a histogram   \n",
-       "2                        Histograms                Interpreting a histogram   \n",
-       "3  Mean and median in data displays  Statistics intro: Mean, median, & mode   \n",
-       "4  Mean and median in data displays                   Median in a histogram   \n",
-       "\n",
-       "  lesson_type  \n",
-       "0       Video  \n",
-       "1       Video  \n",
-       "2       Video  \n",
-       "3       Video  \n",
-       "4       Video  "
+       "                              group                                  lesson  \n",
+       "0    Frequency tables and dot plots            Frequency tables & dot plots  \n",
+       "1                        Histograms                    Creating a histogram  \n",
+       "2                        Histograms                Interpreting a histogram  \n",
+       "3  Mean and median in data displays  Statistics intro: Mean, median, & mode  \n",
+       "4  Mean and median in data displays                   Median in a histogram  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,13 +133,13 @@
     "db = client['khan-academy']\n",
     "\n",
     "# Lessons collection\n",
-    "colLessons = db[\"lessons\"]\n",
+    "# colLessons = db[\"lessons\"]\n",
     "\n",
-    "query = { 'subject': subject, 'lesson_type': \"Article\", 'lesson_type': \"Video\" }\n",
+    "query = { 'subject': subject, 'lesson_type': { \"$in\": [ \"Article\", \"Video\" ] } }\n",
     "# query = { 'subject': subject, 'lesson_type': { $in: [\"Video\", \"Article\"] } }\n",
     "# { $in: [ \"ALGOL\", \"Lisp\" ]} \n",
     "# columns = {'_id': 0, 'unit_sequence': 0, 'lesson_type': 0, 'lesson_link': 0 }\n",
-    "columns = {'_id': 0, 'unit_sequence': 0, 'lesson_link': 0 }\n",
+    "columns = {'_id': 0, 'unit_sequence': 0, 'lesson_type': 0, 'lesson_link': 0 }\n",
     "\n",
     "\n",
     "# Ver\n",
@@ -160,8 +147,9 @@
     "\n",
     "\n",
     "\n",
-    "# lessons = colLessons.find(query, columns)\n",
     "lessons = db.lessons.find(query, columns)\n",
+    "\n",
+    "\n",
     "\n",
     "list_lessons = list(lessons)\n",
     "df = pd.DataFrame(list_lessons)\n",
@@ -171,16 +159,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RangeIndex(start=0, stop=99, step=1)"
+       "RangeIndex(start=0, stop=112, step=1)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
